# movie_recommendation

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: docker-image.yml  rust.yml
src/: lib.rs  main.rs  redis.rs  redis_helper.rs  tmdb_helper.rs  workflow.rs
src/test/: keywords_response.json  recommendations_response.json  watch_provider_response.json  watch_providers_list_response.json
src/test/keyword_responses/: keyword_response_movie_123.json  keyword_response_movie_321.json  keyword_response_movie_456.json  keyword_response_movie_654.json  keyword_response_movie_789.json  keyword_response_movie_987.json
