[package]
name = "movie_recommendation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
reqwest = { version = "0.11.24", features = ["json"] }
tokio = { version = "1.36.0", features = ["full"] }
futures = "0.3.30"
chrono = "0.4.34"
actix-web = "4.5.1"
actix-cors = "0.7.0"
