[package]
name = "movie_recommendation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
reqwest = { version = "0.11.24", features = ["json"] }
tokio = { version = "1.36.0", features = ["full"] }
futures = "0.3.30"
chrono = "0.4.34"
actix-web = "4.5.1"
actix-cors = "0.7.0"
redis = "0.24.0"
actix-session = { version = "0.9.0", features = ["cookie-session"] }
uuid = { version = "1.7.0", features = ["v4"] }
log = "0.4.21"
env_logger = "0.11.3"
httpmock = "0.7.0"
lazy_static = "1.4.0"
console_error_panic_hook = "0.1.7"
